--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -3,7 +3,8 @@
    * Typography
    * ======================================================================== */
 
-  --font-family-base: 'Segoe UI', 'HelveticaNeue-Light', sans-serif;
+  --font-family-base: 'Poppins', 'Segoe UI', 'HelveticaNeue-Light', sans-serif;
+  --font-family-cursive: 'Yesteryear', cursive;
 
   /*
    * Layout
@@ -15,20 +16,20 @@
    * Media queries breakpoints
    * ======================================================================== */
 
-/*  --screen-xs-min: 480px;  /* Extra small screen / phone */
-/*  --screen-sm-min: 768px;  /* Small screen / tablet */
-/*  --screen-md-min: 992px;  /* Medium screen / desktop */
-/*  --screen-lg-min: 1200px; /* Large screen / wide desktop */
-
   @custom-media --xs-viewport (min-width: 480px);
   @custom-media --sm-viewport (min-width: 768px);
   @custom-media --md-viewport (min-width: 992px);
   @custom-media --lg-viewport (min-width: 1200px);
 
-  --colour-primary: #6495ED;
-  --colour-secondary: #2A6FEB;
-  --colour-tertiary: #2A6FEB;
-  --colour-grey: #CCC;
-  --colour-green: #87EDA2;
-  --colour-red: #FA7575;
+  /*
+   * Colour palette
+   * ======================================================================== */
+
+  --colour-nearblack: #282828;
+  --colour-primary: #6495ed;
+  --colour-secondary: #2a6feb;
+  --colour-tertiary: #2a6feb;
+  --colour-grey: #ccc;
+  --colour-green: #87eda2;
+  --colour-red: #fa7575;
 }
