Replace home page image

--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -3,7 +3,7 @@
    * Typography
    * ======================================================================== */
 
-  --font-family-base: 'Poppins', 'Segoe UI', 'HelveticaNeue-Light', sans-serif;
+  --font-family-base: 'Palanquin Dark', 'Segoe UI', 'HelveticaNeue-Light', sans-serif;
   --font-family-cursive: 'Yesteryear', cursive;
 
   /*
