--- a/src/components/RsvpButton/RsvpButton.css
+++ b/src/components/RsvpButton/RsvpButton.css
@@ -71,9 +71,9 @@
 .invalidMsg {
   display: none;
   padding: 10px 16px;
-  border: 4px solid var(--colour-red);
+  border: 2px solid var(--colour-red);
   border-radius: 14px;
-  background: transparent;
+  background: var(--colour-nearblack);
   color: #fff;
   text-decoration: none;
   font-size: 18px;
@@ -83,6 +83,7 @@
 
 .invalidMsgVisible {
   display: inline-block;
+  opacity: 0.9;
 }
 
 .button {
@@ -95,7 +96,7 @@
   outline: 0;
   border: 4px solid #fff;
   border-radius: 14px;
-  background: transparent;
+  background: var(--colour-nearblack);
   color: #fff;
   text-align: center;
   text-decoration: none;
@@ -107,7 +108,7 @@
 
 .button:hover,
 .button:focus {
-  opacity: 1;
+  opacity: 0.9;
   box-shadow: 0 0 4px #fff;
 }
 
