--- a/src/routes/adminPerson/AdminPerson.css
+++ b/src/routes/adminPerson/AdminPerson.css
@@ -37,41 +37,13 @@
   color: #616161;
   font-size: 18px;
   line-height: 1.3333333;
-  transition: border-color ease-in-out 0.15s,
-              box-shadow ease-in-out 0.15s,
-              background-color ease-in-out 0.15s;
+  transition:
+    border-color ease-in-out 0.15s,
+    box-shadow ease-in-out 0.15s,
+    background-color ease-in-out 0.15s;
 }
 
 .input:focus {
   border-color: var(--colour-tertiary);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 116, 194, 0.6);
 }
-
-.button {
-  display: block;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 10px 16px;
-  width: 100%;
-  outline: 0;
-  border: 1px solid var(--colour-secondary);
-  border-radius: 0;
-  background: var(--colour-primary);;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 1.3333333;
-  cursor: pointer;
-}
-
-.button:hover {
-  background: var(--colour-secondary);
-}
-
-.button:focus {
-  border-color: var(--colour-tertiary);
-  box-shadow: 0 0 8px var(--colour-secondary);
-}
-
-
