--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -4,7 +4,7 @@
    * ======================================================================== */
 
   --font-family-base: 'Palanquin Dark', 'Segoe UI', 'HelveticaNeue-Light', sans-serif;
-  --font-family-cursive: 'Yesteryear', cursive;
+  --font-family-cursive: 'Niconne', cursive;
 
   /*
    * Layout
