--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -32,6 +32,7 @@
   margin: 0 auto 40px;
   text-align: center;
   color: #fff;
+  text-shadow: 3px 3px 8px var(--colour-nearblack);
   font-size: 1.3em;
 }
 
