--- a/src/routes/adminPeople/AdminPeople.css
+++ b/src/routes/adminPeople/AdminPeople.css
@@ -11,6 +11,15 @@
   max-width: var(--max-content-width);
 }
 
+table {
+  border-spacing: 0;
+}
+
+td {
+  position: relative;
+  padding: 0 14px;
+}
+
 .formGroup {
   position: relative;
   margin-bottom: 15px;
@@ -43,4 +52,24 @@
 .input:focus {
   border-color: var(--colour-tertiary);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 116, 194, 0.6);
+}
+
+.personForm {
+  display: none;
+}
+
+.personFormVisible {
+  display: block;
+}
+
+.sortIcon {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.showSortIcon {
+  display: inline-block;
 }
