Add UI for import/export data

--- a/src/routes/adminPeople/AdminPeople.css
+++ b/src/routes/adminPeople/AdminPeople.css
@@ -73,3 +73,11 @@ td {
 .showSortIcon {
   display: inline-block;
 }
+
+.importForm {
+  display: none;
+}
+
+.importFormVisible {
+  display: block;
+}
